force-app/main/default/objects/df_journal_se_new__c/fields/ska_det_vara_mjligt_att_ge_vlgre_287__c.field-meta.xml
<CustomField>
    <fullName>ska_det_vara_mjligt_att_ge_vlgre_287__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska det vara möjligt att ge välg ddb63</label>
    <type>Checkbox</type>
</CustomField>