force-app/main/default/objects/df_journal_se_new__c/fields/ska_det_vara_mjligt_att_utse_ick_246__c.field-meta.xml
<CustomField>
    <fullName>ska_det_vara_mjligt_att_utse_ick_246__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska det vara möjligt att utse ic 0f6bd</label>
    <type>Checkbox</type>
</CustomField>