force-app/main/default/objects/df_journal_se_new__c/fields/ska_ett_artikelbidrag_infogas__c.field-meta.xml
<CustomField>
    <fullName>ska_ett_artikelbidrag_infogas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska ett artikelbidrag infogas?</label>
    <type>Checkbox</type>
</CustomField>