force-app/main/default/objects/df_journal_se_new__c/fields/ska_ett_saklegat_sttas_in__c.field-meta.xml
<CustomField>
    <fullName>ska_ett_saklegat_sttas_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska ett saklegat sättas in?</label>
    <type>Checkbox</type>
</CustomField>