force-app/main/default/objects/df_journal_se_new__c/fields/ska_ett_vrdnadstestamente_finnas_303__c.field-meta.xml
<CustomField>
    <fullName>ska_ett_vrdnadstestamente_finnas_303__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska ett vårdnadstestamente finna 3f3fd</label>
    <type>Checkbox</type>
</CustomField>