force-app/main/default/objects/df_journal_se_new__c/fields/ska_framtidsfullmakten_upphra_at_242__c.field-meta.xml
<CustomField>
    <fullName>ska_framtidsfullmakten_upphra_at_242__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska framtidsfullmakten upphöra a 58a88</label>
    <type>Checkbox</type>
</CustomField>