force-app/main/default/objects/df_journal_se_new__c/fields/ska_fullmaktshavaren_bli_ersatt_243__c.field-meta.xml
<CustomField>
    <fullName>ska_fullmaktshavaren_bli_ersatt_243__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska fullmaktshavaren bli ersatt  ef7d4</label>
    <type>Checkbox</type>
</CustomField>