force-app/main/default/objects/df_journal_se_new__c/fields/ska_fullmaktshavaren_eller_domst_244__c.field-meta.xml
<CustomField>
    <fullName>ska_fullmaktshavaren_eller_domst_244__c</fullName>
    <label>Ska fullmaktshavaren eller domst c1ad0</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>fullmaktshavaren</fullName>
                <label>Fullmaktshavaren</label>
            </value>
            <value>
                <fullName>domstol</fullName>
                <label>Domstol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>