force-app/main/default/objects/df_journal_se_new__c/fields/ska_granskare_kunna_terkalla_ful_277__c.field-meta.xml
<CustomField>
    <fullName>ska_granskare_kunna_terkalla_ful_277__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska granskare kunna återkalla fu 620e6</label>
    <type>Checkbox</type>
</CustomField>