force-app/main/default/objects/df_journal_se_new__c/fields/ska_reglerna_om_barnen_andra_arv_233__c.field-meta.xml
<CustomField>
    <fullName>ska_reglerna_om_barnen_andra_arv_233__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska reglerna om barnen / andra a 920a8</label>
    <type>Checkbox</type>
</CustomField>