force-app/main/default/objects/df_journal_se_new__c/fields/ska_reglerna_om_barnen_fortstta__c.field-meta.xml
<CustomField>
    <fullName>ska_reglerna_om_barnen_fortstta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska reglerna om barnen fortsätta 0c94b</label>
    <type>Checkbox</type>
</CustomField>