force-app/main/default/objects/df_journal_se_new__c/fields/ska_samrd_med_nrstende_ske__c.field-meta.xml
<CustomField>
    <fullName>ska_samrd_med_nrstende_ske__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska samråd med närstående ske?</label>
    <type>Checkbox</type>
</CustomField>