force-app/main/default/objects/df_journal_se_new__c/fields/ska_subsidira_fullmaktshavare_st_293__c.field-meta.xml
<CustomField>
    <fullName>ska_subsidira_fullmaktshavare_st_293__c</fullName>
    <label>Ska subsidiära fullmaktshavare s f717b</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>tilsammans_p2</fullName>
                <label>Tilsammans</label>
            </value>
            <value>
                <fullName>prioritetsordning_p2</fullName>
                <label>Prioritetsordning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>