force-app/main/default/objects/df_journal_se_new__c/fields/ska_testamentet_fortstta_att_gll_234__c.field-meta.xml
<CustomField>
    <fullName>ska_testamentet_fortstta_att_gll_234__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska testamentet fortsätta att gä 3a879</label>
    <type>Checkbox</type>
</CustomField>