force-app/main/default/objects/df_journal_se_new__c/fields/ska_testamentet_upphra_att_glla_304__c.field-meta.xml
<CustomField>
    <fullName>ska_testamentet_upphra_att_glla_304__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska testamentet upphöra att gäll da0c6</label>
    <type>Checkbox</type>
</CustomField>