force-app/main/default/objects/df_journal_se_new__c/fields/ska_vra_fullmaktig_primr_vrdnads_295__c.field-meta.xml
<CustomField>
    <fullName>ska_vra_fullmaktig_primr_vrdnads_295__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ska vära fullmaktig d9200</label>
    <type>Checkbox</type>
</CustomField>