force-app/main/default/objects/df_journal_se_new__c/fields/skal_der_indsttes_subsidire_full_291__c.field-meta.xml
<CustomField>
    <fullName>skal_der_indsttes_subsidire_full_291__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal der indsættes subsidiære fu 3e086</label>
    <type>Checkbox</type>
</CustomField>