force-app/main/default/objects/df_journal_se_new__c/fields/srskilda_villkor__c.field-meta.xml
<CustomField>
    <fullName>srskilda_villkor__c</fullName>
    <label>Särskilda villkor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>