force-app/main/default/objects/df_journal_se_new__c/fields/stad_person1__c.field-meta.xml
<CustomField>
    <fullName>stad_person1__c</fullName>
    <label>Person 1 Stad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>