force-app/main/default/objects/df_journal_se_new__c/fields/telefonnummer_person1__c.field-meta.xml
<CustomField>
    <fullName>telefonnummer_person1__c</fullName>
    <label>Person 1 Telefonnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>