force-app/main/default/objects/df_journal_se_new__c/fields/typ_av_ktenskap__c.field-meta.xml
<CustomField>
    <fullName>typ_av_ktenskap__c</fullName>
    <label>Typ av äktenskap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ktenskapsfrord_enskild_egendom</fullName>
                <label>Äktenskapsförord/enskild egendom</label>
            </value>
            <value>
                <fullName>inget_ktenskapsfrord_giftorttsgods_enbart</fullName>
                <label>Inget äktenskapsförord/giftorättsgods enbart</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>