force-app/main/default/objects/df_journal_se_new__c/fields/vad_r_viktigt_fr_kunden__c.field-meta.xml
<CustomField>
    <fullName>vad_r_viktigt_fr_kunden__c</fullName>
    <label>Vad är viktigt för kunden?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>