force-app/main/default/objects/df_journal_se_new__c/fields/vill_ha_medlemskap_p2__c.field-meta.xml
<CustomField>
    <fullName>vill_ha_medlemskap_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vill ha medlemskap (P2)</label>
    <type>Checkbox</type>
</CustomField>