force-app/main/default/objects/df_journal_se_new__c/fields/villkorat_arv_lder__c.field-meta.xml
<CustomField>
    <fullName>villkorat_arv_lder__c</fullName>
    <label>Villkorat arv ålder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>