force-app/main/default/objects/df_journal_se_new__c/fields/vlj_arvsfrdelning_efter_den_lngs_238__c.field-meta.xml
<CustomField>
    <fullName>vlj_arvsfrdelning_efter_den_lngs_238__c</fullName>
    <label>Välj arvsfördelning efter den lä 981a2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>procentfrdelning_frst_avlidne</fullName>
                <label>Procentfördelning</label>
            </value>
            <value>
                <fullName>Likadelning_lngst</fullName>
                <label>Likadelning</label>
            </value>
            <value>
                <fullName>arv_efter_gren</fullName>
                <label>Arv efter gren</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>