force-app/main/default/objects/df_journal_se_new__c/fields/vlj_arvsfrdelning_efter_frst_avl_237__c.field-meta.xml
<CustomField>
    <fullName>vlj_arvsfrdelning_efter_frst_avl_237__c</fullName>
    <label>Välj arvsfördelning efter först  ab8e8</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>procentfrdelning_lngst</fullName>
                <label>Procentfördelning</label>
            </value>
            <value>
                <fullName>mest_muligt_ska_tillfalla_lngst_levande_frst_avliden</fullName>
                <label>Mest muligt ska tillfalla längst levande</label>
            </value>
            <value>
                <fullName>mest_muligt_ska_tillfalla_barn</fullName>
                <label>Mest muligt ska tillfalla barn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>