force-app/main/default/objects/df_journal_se_new__c/fields/Year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Birth__c</fullName>
    <formula>LEFT( personnummer_person1__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Birth</label>
    <type>Text</type>
</CustomField>